<resources>
    <string name="app_name">Lesson11Notofications</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="get_notification">Get Notification</string>
    <string name="ticker">Last Chinese prevention</string>
    <string name="content_title">Notification!</string>
    <string name="content_text">It\'s time to feed the cat!</string>
    <string name="clear_message">Clear message</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="button_notification_with_buttons">Notification with buttons</string>
    <string name="button_notification_with_long_text">Notification with long text</string>
    <string name="button_notification_with_big_image">Notification with big image</string>
    <string name="button_notification_style_inbox">Notification style Inbox</string>
    <string name="ticker2">Posting came</string>
    <string name="Title2">Posting!</string>
    <string name="Text2">This is me, post Pechkin. I brought to you posting!</string>
    <string name="firstAction">Open</string>
    <string name="second_action">Refuise</string>
    <string name="thread_action">Other</string>
    <string name="goToSecondAction">Second Action</string>
    <string name="big_text">This is me, postman Pechkin. I have brought a box to you. But I         will not give it to you. Because you do not have documents.</string>
    <string name="big_posting">Big posting</string>
    <string name="big_ticket">Big posting came</string>
    <string name="notification_big">Notification with big image</string>
    <string name="launch_activity">Launch activity</string>
    <string name="notification_inbox">Notification Inbox style</string>
    <string name="inbox_style">Inbox style notification!</string>
    <string name="firstMessage">First message</string>
    <string name="secondMessage">Second message</string>
    <string name="thirdMessage">Third message</string>
    <string name="more">+2 more</string>
</resources>
