<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.artests.lesson11notofications.Main2Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/lesson9_popup_menu">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_notification_with_buttons"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:onClick="sendNotificationWithButtons"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_notification_with_long_text"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:onClick="sendNotificationWithLongText"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_notification_with_big_image"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:onClick="sendNotoficationWithBigImage"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_notification_style_inbox"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:onClick="sendNotificationWithInbox"/>
    </LinearLayout>
</RelativeLayout>
